# route-rules

./: .cspell.json  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  404.html  CHANGELOG.md  Justfile  Makefile  README.md  __builtins__.pyi  index.html  meta.json  mkdocs.yaml  noxfile.py  objects.inv  pyproject.toml  pyrightconfig.json  requirements.txt  sitemap.xml  zensical.toml
.config/: cspell.config.yaml  rumdl.toml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/copier/mise-tasks/: bench.sh  install.sh  test.sh  upgrade.sh
.config/direnv/: 10-python.sh
.config/linters/: .ruff.toml
.config/mise/: config.toml
.config/mise/conf.d/: 10-python.toml  50-python.toml  50-shared.toml
.config/mise/tasks/: build.sh
.config/release-please/: .manifest.json  config.json
.github/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.github/linters/: .ruff.toml  pyrightconfig.json
.github/release-please/: config.json
.github/workflows/: bench.yaml  build-mihomo.yaml  ci.yaml  copier-update.yaml  docs.yaml  mega-linter.yaml  python-bench.yaml  python-docs.yaml  python-release.yaml  python-test.yaml  release-please.yaml  release-pr.yaml  release-publish.yaml  release.yaml  shared-approve.yaml  shared-copier-update.yaml  shared-docs.yaml  shared-mega-linter.yaml  shared-pr.yaml  shared-release-please.yaml  shared-release.yaml  shared-repo.yaml  test.yaml
SUMMARY/: index.html
_config/: dns-fakeip.json  dns.json  route.json
api/SUMMARY/: index.html
api/route_rules/: index.html
api/route_rules/container/: index.html
api/route_rules/logging/: index.html
api/route_rules/source/: index.html
api/route_rules/typing/: index.html
api/route_rules/utils/: index.html
api/sbr/: index.html
api/sbr/container/: index.html
api/sbr/logging/: index.html
api/sbr/source/: index.html
api/sbr/typing/: index.html
api/sbr/utils/: index.html
config/: index.html
css/: fonts.css
custom/: !cn.json  cn.json  download.json  emby.json
docs/: .nav.yml  README.md  SUMMARY.md  ai.md  binance.md  config.md  crypto.md  direct.md  domestic.md  download.md  global.md  links.md  local.md  sources.md  statistics.md  stats.md  stream.md  telegram.md
docs/.scripts/: gen-rulesets.py
docs/_config/: dns-fakeip.json  dns.json  route.json
docs/css/mkdocstrings/: material.css  syntax-highlight-in-signatures.css
docs/rulesets/: .nav.yml  README.md
docs/usage/: sing-box.md
geoip/: ads.json  ads.srs  ai.json  ai.srs  cn.json  cn.srs  download.json  emby.json  emby.srs  media.json  media.srs  private.json  proxy.json  proxy.srs
geosite/: ads.json  ads.srs  ai.json  ai.srs  cn.json  cn.srs  download.json  download.srs  emby.json  emby.srs  media.json  media.srs  private.json  private.srs  proxy.json  proxy.srs
makefiles/: data.mk  output.mk
megalinter-reports/: .cspell.json  IDE-config.txt  megalinter-report.md
megalinter-reports/copy-paste/html/: index.html  jscpd-report.json
megalinter-reports/updated_sources/docs/: README.md  sources.md
megalinter-reports/updated_sources/scripts/: compile.sh
mihomo/: ai.classical.list  ai.domain.list  ai.domain.mrs  binance.domain.list  binance.domain.mrs  crypto.classical.list  crypto.domain.list  crypto.domain.mrs  direct.classical.list  direct.domain.list  direct.domain.mrs  domestic.classical.list  domestic.domain.list  domestic.domain.mrs  domestic.ipcidr.list  domestic.ipcidr.mrs  download.classical.list  download.domain.list  download.domain.mrs  global.classical.list  global.domain.list  global.domain.mrs  global.ipcidr.list  global.ipcidr.mrs  local.domain.list  local.domain.mrs  local.ipcidr.list  local.ipcidr.mrs  stream.classical.list  stream.domain.list  stream.domain.mrs  stream.ipcidr.list  stream.ipcidr.mrs  telegram.domain.list  telegram.domain.mrs  telegram.ipcidr.list  telegram.ipcidr.mrs
preset/: ads.py  ai.py  cn.py  download.py  emby.py  geosite.py  media.py  private.py
reference/route_rules/: index.html
reference/route_rules/core/: index.html
reference/route_rules/export/: index.html
reference/route_rules/provider/: index.html
reference/route_rules/utils/: index.html
rule-set/: ads.json  ads.srs  ai.json  ai.srs  cn.json  cn.srs  download.json  download.srs  emby.json  emby.srs  media.json  media.srs  private.json  private.srs  proxy.json  proxy.srs
rules/: !domestic.domain.list  direct.domain.list  global.list
rulesets/ai/: index.html
rulesets/binance/: index.html
rulesets/direct/: index.html
rulesets/domestic/: index.html
rulesets/download/: index.html
rulesets/global/: index.html
rulesets/local/: index.html
rulesets/stream/: index.html
rulesets/telegram/: index.html
scripts/: build.py  compile.sh  gen-init.sh  gen-ref-pages.py  render-docs.py  summary.py
scripts/docs/: gen-ref-pages.py  gen-stats.py
search/: search_index.json
sources/: index.html
src/route_rules/: __init__.pyi  _recipe.py  _version.py
src/route_rules/container/: __init__.pyi  _rule.py  _rule_set.py
src/route_rules/core/: __init__.pyi  _recipe.py  _rule_set.py  _ruleset.py  _statistics.py  _target.py
src/route_rules/export/: __init__.pyi  _abc.py  _mihomo.py
src/route_rules/logging/: __init__.pyi
src/route_rules/provider/: __init__.pyi  _abc.py  _mihomo.py  _registry.py
src/route_rules/source/: _abc.py  _clash.py  _const.py  _geoip.py  _geosite.py  _singbox.py
src/route_rules/typing/: _alias.py
src/route_rules/utils/: __init__.pyi  _as.py  _cache.py  _download.py  _slugify.py
src/sbr/: __init__.py  __init__.pyi  geoip.py  geosite.py  optim.py  rule.py  rule_set.py  utils.py
src/sbr/container/: _rule.py  _rule_set.py
src/sbr/logging/: _init.py
src/sbr/preset/: __init__.py  _ads.py  _ai.py  _cn.py  _download.py  _emby.py  _media.py  _private.py  _proxy.py
stats/: index.html
tools/: build.py
tools/docs/: gen-stats.py
typings/: __builtins__.pyi
typings/cytoolz/: __init__.pyi
usage/sing-box/: index.html
(+43 files in other folders)
