#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "route-rules"
description = "TODO"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" },
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "anyio>=4.4.0",
  "boltons>=24.0.0",
  "httpx[socks]>=0.27.2",
  "humanize>=4.10.0",
  "lazy-loader>=0.4",
  "lazy-loader>=0.4,<0.5",
  "loguru>=0.7,<0.8",
  "loguru>=0.7.2",
  "prettytable>=3.14.0",
  "pydantic>=2.8.2",
  "rich>=13.8.0",
  "ubelt>=1.3.6",
  "validators>=0.34.0",
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/route-rules/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/route-rules/"
"Funding" = "https://github.com/liblaf/route-rules?sponsor=1"
"Homepage" = "https://github.com/liblaf/route-rules"
"Issue Tracker" = "https://github.com/liblaf/route-rules/issues"
"Release Notes" = "https://github.com/liblaf/route-rules/releases"
"Source Code" = "https://github.com/liblaf/route-rules"

[dependency-groups]
build = ["check-wheel-contents>=0.6,<0.7", "hatch>=1,<2", "twine>=6,<7"]
dev = ["icecream>=2,<3"]
docs = ["liblaf-mkdocs-preset>=0.1,<0.2", "mkdocs>=1,<2"]
test = [
  "hypothesis>=6,<7",
  "pytest-codspeed>=4,<5",
  "pytest-cov>=6,<7",
  "pytest-randomly>=3,<4",
  "pytest-xdist>=3,<4",
  "pytest>=8,<9",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/route_rules/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/route_rules"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
exclude = ["**/.*", "**/__pycache__", "**/marimo", "**/node_modules"]
extends = ".config/linters/pyrightconfig.json"

[tool.pytest.ini_options]
addopts = [
  "--hypothesis-show-statistics",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
]
testpaths = ["benches", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.uv]
default-groups = "all"
