#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "route-rules"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = [
  "anyio>=4",
  "autoregistry>=1",
  "cachetools>=7",
  "cachetools-async>=0.0.5",
  "cytoolz>=1",
  "hishel[httpx]>=1",
  "httpx[socks]>=0.28",
  "lazy-loader>=0.5",
  "liblaf-grapes>=9",
  "prettytable>=3",
  "python-slugify>=8",
  "toolz>=1",
  "validators>=0.35"
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/route-rules/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/route-rules/"
"Funding" = "https://github.com/liblaf/route-rules?sponsor=1"
"Homepage" = "https://github.com/liblaf/route-rules"
"Issue Tracker" = "https://github.com/liblaf/route-rules/issues"
"Release Notes" = "https://github.com/liblaf/route-rules/releases"
"Source Code" = "https://github.com/liblaf/route-rules"

[dependency-groups]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = [
  "griffe-fieldz>=0.5",
  "griffe-inherited-docstrings>=1",
  "griffe-pydantic>=1",
  "griffe-warnings-deprecated>=1",
  "mkdocstrings[python]>=1",
  "zensical>=0.0.36"
]
lint = ["import-linter[ui]>=2", "ruff>=0.15", "ty>=0.0.32"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026", "nox-uv>=0.7"]
test = ["pytest>=9", "pytest-cov>=7", "pytest-randomly>=4"]
typing = ["toolz-stubs>=0.4"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/route_rules/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/route_rules"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "route_rules"

[[tool.importlinter.contracts]]
ancestors = ["route_rules"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.uv]
default-groups = "all"
